*****************
* StateS v. 0.3 *
*****************

- 2016-05-06 - V 0.3.C - Small UI enhancements; Allow drag-and-dropping files on UI to load; Added export options.
- 2015-12-13 - V 0.3.B - VHDL export now correctly handles transition conditions; Began adressing output generation in VHDL export; More information from verifier tool.
- 2015-12-06 - V 0.3.A - Allowed actions kinds is now better handled + better rendering; Enhancments to range and bit adressing in signals; Allow constant definition in equation.
- 2015-11-15 - V 0.3.9 - Corrected machine color update on begin/end simulation; Moving a graphic element now sets unsaved mode; Can now set signal size and initial value at creation; Added a range adressing tool to act on specific bits from a vector; Added concanetation operator.
- 2015-11-01 - V 0.3.8 - Added explicit sorting for signals within each interface; Added hints on how to draw machine; Added machine naming; Image export now correctly place elements; Many small GUI improvements.
- 2015-06-07 - V 0.3.7 - Ressources bar labels are now set auto-wrap to avoid excessive minimal width of the bar; Corrected keyboard handeling on scene items.
- 2015-06-06 - V 0.3.6 - Restricted allowed characters in signals names; Signal creation/edition and state renaming now allows for cancel using button or escape key; Reorganized signal editor tab.
- 2015-06-01 - V 0.3.5 - Corrected issue with actions on transition being maintained.
- 2015-05-30 - V 0.3.4 - Extended export options to new image formats; Added machine external view.
- 2015-05-25 - V 0.3.3 - Added rubber band selection; Added ability to force state activation in simulation mode; wheel navigation improvement.
- 2015-05-14 - V 0.3.2 - Output delay from clock event is now facultative. Ctrl-S shortcut support. Better keyboard event handling. Cursor is back on simulaion timeline. Actions on initial state are now activated on reset.