@@ -2,6 +2,7 @@
 * StateS v. 0.3 *
 *****************
 
+- 2016-05-07 - V 0.3.D - Corrected image export display.
 - 2016-05-06 - V 0.3.C - Small UI enhancements; Allow drag-and-dropping files on UI to load; Added export options.
 - 2015-12-13 - V 0.3.B - VHDL export now correctly handles transition conditions; Began adressing output generation in VHDL export; More information from verifier tool.
 - 2015-12-06 - V 0.3.A - Allowed actions kinds is now better handled + better rendering; Enhancments to range and bit adressing in signals; Allow constant definition in equation.
